--- a/requirements.txt
+++ b/requirements.txt
@@ -9,13 +9,16 @@ django-js-asset==1.2.2
 django-user-visit==0.4.1
 djangorestframework==3.12.4
 future==0.18.2
+html5lib==1.1
 idna==2.10
 lxml==4.6.3
 Pillow==8.2.0
 pytz==2021.1
 requests==2.25.1
+six==1.16.0
 soupsieve==2.2.1
 sqlparse==0.4.1
 ua-parser==0.10.0
 urllib3==1.26.4
 user-agents==2.2.0
+webencodings==0.5.1
